Endret navnet på knappen

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -95,7 +95,7 @@
   <datalist id="bilModelList"></datalist>
 
   <button type="button" onclick="addProdukt()">Registrer</button>
-  <button type="button" onclick="fillFormAutomatically()">Fyll ut automatisk</button>
+  <button type="button" onclick="fillFormAutomatically()">Legg til 20 brukere</button>
 </form>
 
 <h2>Motorvognregister</h2>
